redesignedoj/files_usersubmissions/2/submission.txt
2_TWOSUM_code.cpp:2:20: error: expected ‘;’ before ‘int’
    2 | using namespace std
      |                    ^
      |                    ;
    3 | int main(){
      | ~~~                 
